--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
   "scripts": {
     "start": "node ./dist/index.js --disable-proto=throw",
     "build": "tsc",
+    "serve": "tsc && npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Borna Butkovic",
   "license": "UNLICENSED",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "ip": "^1.1.5",
     "puppeteer": "^13.5.2",
     "puppeteer-har": "^1.1.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/ip": "^1.1.0",
     "typescript": "^4.6.3"
   }
 }
