--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node ./dist/index.js --disable-proto=throw",
     "build": "tsc",
     "serve": "tsc && npm run start",
+    "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Borna Butkovic",
@@ -21,6 +22,9 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/ip": "^1.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "eslint": "^8.13.0",
     "typescript": "^4.6.3"
   }
 }
