--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "ip": "^1.1.5",
+    "ipaddr.js": "^2.0.1",
     "puppeteer": "^13.5.2",
     "puppeteer-har": "^1.1.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/ip": "^1.1.0",
     "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
