--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest"
   },
   "author": "Borna Butkovic",
-  "license": "UNLICENSED",
+  "license": "Apache-2.0",
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
