--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "Borna Butkovic",
   "license": "Apache-2.0",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-validator": "^6.14.0",
     "ipaddr.js": "^2.0.1",
     "puppeteer": "^13.5.2",
     "puppeteer-har": "^1.1.2"
