--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "author": "Borna Butkovic",
   "license": "Apache-2.0",
   "dependencies": {
+    "@auteon/puppeteer-har": "github:auteon/puppeteer-har#e3d79a93504e00b17a980febe01e0206b08b8da7",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "ipaddr.js": "^2.0.1",
-    "puppeteer": "^13.5.2",
-    "puppeteer-har": "^1.1.2"
+    "puppeteer": "^13.5.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
