--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         ],
         "outDir": "dist/",
         "module": "commonjs",
-        "target": "es5",
+        "target": "ES2015",
         "lib": ["es6", "dom"],
         "sourceMap": true,
         "allowJs": true,
